crates/parser/tests/parse/memory-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..49
  MODULE@0..48
    L_PAREN@0..1 "("
    KEYWORD@1..7 "module"
    WHITESPACE@7..10 "\n  "
    MODULE_FIELD_MEMORY@10..18
      L_PAREN@10..11 "("
      KEYWORD@11..17 "memory"
      R_PAREN@17..18 ")"
    WHITESPACE@18..21 "\n  "
    MODULE_FIELD_MEMORY@21..32
      L_PAREN@21..22 "("
      KEYWORD@22..28 "memory"
      WHITESPACE@28..29 " "
      ERROR@29..31 "\"\""
      R_PAREN@31..32 ")"
    WHITESPACE@32..35 "\n  "
    MODULE_FIELD_MEMORY@35..46
      L_PAREN@35..36 "("
      KEYWORD@36..42 "memory"
      WHITESPACE@42..43 " "
      ERROR@43..44 "("
      ERROR@44..45 ")"
      R_PAREN@45..46 ")"
    WHITESPACE@46..47 "\n"
    R_PAREN@47..48 ")"
  WHITESPACE@48..49 "\n"

error: expected memory type
  ┌─ memory-malformed.wat:2:10
  │
2 │   (memory)
  │          ^

error: expected unsigned integer
  ┌─ memory-malformed.wat:3:11
  │
3 │   (memory "")
  │           ^^

error: unexpected token
  ┌─ memory-malformed.wat:3:11
  │
3 │   (memory "")
  │           ^^

error: unexpected token
  ┌─ memory-malformed.wat:4:12
  │
4 │   (memory ())
  │            ^
